--- a/series/templates/series/all_series.html
+++ b/series/templates/series/all_series.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All series</title>
-</head>
-<body>
-    <h1>All types of Django Elements</h1>
-    
-</body>
-</html>
+{% extends "website/layout.html" %}
+
+
+{% block title %}
+series Page
+{% endblock %}
+
+{% block content %}
+<h1> All Django Series </h1>
+{% endblock  %}
