--- a/templates/website/index.html
+++ b/templates/website/index.html
@@ -1,14 +1,10 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Django-series</title>
-    <link rel="stylesheet" href="{% static 'style.css' %}">
-</head>
-<body>
-    <h1>Django-Series</h1>
-    
-</body>
-</html>
+{% extends "website/layout.html" %}
+
+
+{% block title %}
+HomePage
+{% endblock %}
+
+{% block content %}
+<h1> All Series | HomePage </h1>
+{% endblock  %}
