--- a/templates/website/index.html
+++ b/templates/website/index.html
@@ -6,5 +6,6 @@ HomePage
 {% endblock %}
 
 {% block content %}
-<h1> All Series | HomePage </h1>
+<h1 class="bg-orange-700 text-3xl"> All Series | HomePage </h1>
+
 {% endblock  %}
