--- a/templates/website/layout.html
+++ b/templates/website/layout.html
@@ -1,4 +1,5 @@
- {%  load static  %}
+{% load static tailwind_tags %}
+{%  load static  %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,6 +11,7 @@
         {% endblock %}
     </title>
     <link rel="stylesheet" href="{% static 'style.css' %}">
+    {% tailwind_css %}
 
 </head>
 <body>
